--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 
     <link rel="stylesheet" type="text/css" href="styles.css">
 
-    <title>myFirstWebpage</title>
-    <link rel="icon" type="image/png" href="../assets/sitepoint.png">
+    <title>GF First project</title>
+    <link rel="icon" type="image/png" href="assets/sitepoint.png">
 </head>
 
 <body>
     <header>
         <div class="navBarLine">
-            <img class="setSideMargin" src="../assets/sitepointMOD.png" alt="logo">
+            <img class="setSideMargin" src="assets/sitepointMOD.png" alt="logo">
             <nav class="setSideMargin">
                 <a href="index.html">Home</a>
                 <a href="https://www.wikipedia.org" target="_blank">Wiki</a>
@@ -27,58 +27,80 @@
 
     <div class="setSideMargin">
         <!-- Just have some extra space -->
-        <p style="margin-bottom: 5em;"></p>
+        <p style="margin-bottom: 5rem;"></p>
 
         <section>
             <h1>Jakab Zoltán</h1>
-            <h3>GreenFox Junior Sysadmin</h3>
+            <h2>GreenFox Junior Sysadmin</h2>
             <p>Karrierváltás céljából jelentkeztem az Újrakezdés 3.0 programba, ahol egy lelkes csapattal próbálom
                 megszerezni az ehhez szükséges alaptudást szuper mentori támogatással.
                 <br><br>
-                A jövőmet rendszerüzemeltetőként képzelem el. Esetleg hacker-ként. 
-                <span style="color: #ff0099;">&#128525</span>
+                A jövőmet rendszerüzemeltetőként képzelem el egy nagyvállalatnál, ahol drága gépeket tehetek tönkre.
+                Hiszen tudjuk az alapigazságot, a megszerzett szakmai tapasztalat egyenes arányban van a tönkretett
+                berendezések számával.
+                <br><br>
+                Esetleg hacker leszek. <span style="color: #ff0099;">&#128525;</span>
+                <br>
+                Majd meglátom melyik fizet jobban...
             </p>
         </section>
 
         <p class="verticalSpace"></p>
-        <p style="text-align: center; font-weight: 900;">- - -</p>
+        <p style="text-align: center; font-weight: 900;">&#151;&nbsp;&nbsp;&#151;&nbsp;&nbsp;&#151;</p>
         <p class="verticalSpace"></p>
 
         <section>
-            <p style="text-align: center; font-size: 35px; font-weight: 900;">Technology Wiki</p>
+            <p style="text-align: center; font-size: 2.4rem; font-weight: 900;">Technology Wiki</p>
             <p class="verticalSpace"></p>
 
-            <h4>Logikai kapu</h4>
-            <p>Egy olyan idealizált vagy fizikai eszköz ami logikai alapmüveletet valósít meg egy vagy több bináris
-                bemeneten és produkál egy bináris kimenetet.
-            </p>
+            <article>
+                <h3>Logikai kapu</h3>
+                <p>Egy olyan idealizált vagy fizikai eszköz ami logikai alapmüveletet valósít meg egy vagy több bináris
+                    bemeneten és produkál egy bináris kimenetet.
+                </p>
+            </article>
 
-            <h4>ASCII</h4>
-            <p>Az angol neve American Standard Code for Information Interchange. A számítógépek csak a számokat értik,
-                így a 'a' vagy '@' karakterek értelmezéséhez szükséges számosított értékeket írja le.
-            </p>
+            <article>
+                <h3>ASCII</h3>
+                <p>Az angol neve American Standard Code for Information Interchange. A számítógépek csak a számokat
+                    értik,
+                    így a 'a' vagy '@' karakterek értelmezéséhez szükséges számosított értékeket írja le.
+                </p>
+            </article>
 
-            <h4>RAM</h4>
-            <p>Egy véletlen elérésű írható–olvasható adattároló eszköz. Tárolja a CPU által végrehajtandó programokat
-                és a feldolgozásra váró adatokat. Egy adott memóriarész elérésének gyorsasága független az 
-                elhelyezkedésétől.
-            </p>
+            <article>
+                <h3>RAM</h3>
+                <p>Egy véletlen elérésű írható–olvasható adattároló eszköz. Tárolja a CPU által végrehajtandó
+                    programokat
+                    és a feldolgozásra váró adatokat. Egy adott memóriarész elérésének gyorsasága független az
+                    elhelyezkedésétől.
+                </p>
+            </article>
 
-            <h4>Algoritmus / program</h4>
-            <p>A számítástechnikában használt olyan, az ember által olvasható és értelmezhető utasítások sorozata,
-                amivel közvetlenül, vagy közvetve (például: gépi kódra fordítás után) közölhetjük a számítógéppel 
-                egy adott feladat elvégzésének módját.
-            </p>
+            <article>
+                <h3>Algoritmus / program</h3>
+                <p>A számítástechnikában használt olyan, az ember által olvasható és értelmezhető utasítások sorozata,
+                    amivel közvetlenül, vagy közvetve (például: gépi kódra fordítás után) közölhetjük a számítógéppel
+                    egy adott feladat elvégzésének módját.
+                </p>
+            </article>
 
-            <h4>DNS (Domain Name System)</h4>
-            <p>Egy hierarchikus, nagymértékben decentralizált elnevezési rendszer számítógépek, szolgáltatások, illetve
-                az internetre vagy egy magánhálózatra kötött bármilyen erőforrás számára.
-            </p>
+            <article>
+                <h3>DNS (Domain Name System)</h3>
+                <p>Egy hierarchikus, nagymértékben decentralizált elnevezési rendszer számítógépek, szolgáltatások,
+                    illetve
+                    az internetre vagy egy magánhálózatra kötött bármilyen erőforrás számára.
+                </p>
+            </article>
 
-            <h4>HTTP</h4>
-            <p>Egy alkalmazás protokol elosztott, együttműködő és hipermédiás információs rendszerek részére. A World
-                Wide Web adat kommunikációjának alapja. Ez az alapvető protokol a hypertext cseréjére és mozgatására.
-            </p>
+            <article>
+                <h3>HTTP</h3>
+                <p>Egy alkalmazás protokol elosztott, együttműködő és hipermédiás információs rendszerek részére. A
+                    World
+                    Wide Web adat kommunikációjának alapja. Ez az alapvető protokol a hypertext cseréjére és
+                    mozgatására.
+                </p>
+            </article>
         </section>
     </div>
 
