--- a/index.html
+++ b/index.html
@@ -5,111 +5,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&family=Rampart+One&display=swap"
-        rel="stylesheet">
-
-    <title>GF First project</title>
-    <link rel="icon" type="image/png" href="assets/sitepoint.png">
 </head>
 
 <body>
-    <header>
-        <img id="logo" class="setSideMargin" src="assets/sitepointMOD.png" alt="logo">
-        <nav class="setSideMargin">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#techWiki">Wiki</a></li>
-                <li><a href="https://github.com/" target="_blank">Github</a></li>
-                <li><a href="https://hu.linkedin.com/" target="_blank">Linkedin</a></li>
-            </ul>
-        </nav>
-    </header>
+	<h3>1. nap - Senj este
+        <img src="img/1nap-01.jpg" alt="kep">
+        <img src="img/1nap-02.jpg" alt="kep">
+        <img src="img/1nap-03.jpg" alt="kep">
+        <img src="img/1nap-04.jpg" alt="kep">
+	<br>
+	<br>
 
-    <div class="setSideMargin">
-        <!-- Just have some extra space -->
-        <p class="verticalSpaceBig"></p>
+	<h3>2. nap - Velebit tura
+        <img src="img/2nap-01.jpg" alt="kep">
+        <img src="img/2nap-02.jpg" alt="kep">
+        <img src="img/2nap-03.jpg" alt="kep">
+        <img src="img/2nap-04.jpg" alt="kep">
+        <img src="img/2nap-05.jpg" alt="kep">
+        <img src="img/2nap-06.jpg" alt="kep">
+        <img src="img/2nap-07.jpg" alt="kep">
+        <img src="img/2nap-08.jpg" alt="kep">
+        <img src="img/2nap-09.jpg" alt="kep">
+        <img src="img/2nap-10.jpg" alt="kep">
+        <img src="img/2nap-11.jpg" alt="kep">
+        <img src="img/2nap-12.jpg" alt="kep">
+        <img src="img/2nap-13.jpg" alt="kep">
+        <img src="img/2nap-14.jpg" alt="kep">
+        <img src="img/2nap-15.jpg" alt="kep">
+        <img src="img/2nap-16.jpg" alt="kep">
+        <img src="img/2nap-17.jpg" alt="kep">
+        <img src="img/2nap-18.jpg" alt="kep">
+        <img src="img/2nap-19.jpg" alt="kep">
+        <img src="img/2nap-20.jpg" alt="kep">
+        <img src="img/2nap-21.jpg" alt="kep">
+        <img src="img/2nap-22.jpg" alt="kep">
+        <img src="img/2nap-23.jpg" alt="kep">
+        <img src="img/2nap-24.jpg" alt="kep">
+        <img src="img/2nap-25.jpg" alt="kep">
+        <img src="img/2nap-26.jpg" alt="kep">
 
-        <section>
-            <h1>Jakab Zoltán</h1>
-            <h2>GreenFox Junior Sysadmin</h2>
-            <p>Karrierváltás céljából jelentkeztem az Újrakezdés 3.0 programba, ahol egy lelkes csapattal próbálom
-                megszerezni az ehhez szükséges alaptudást szuper mentori támogatással.
-                <br><br>
-                A jövőmet rendszerüzemeltetőként képzelem el egy nagyvállalatnál, ahol drága gépeket tehetek tönkre.
-                Hiszen tudjuk az alapigazságot, a megszerzett szakmai tapasztalat egyenes arányban van a tönkretett
-                berendezések számával.
-                <br><br>
-                Esetleg hacker leszek. <span style="color: #ff0099;">&#128513;</span>
-                <br>
-                Majd meglátom melyik fizet jobban...
-            </p>
-        </section>
 
-        <p class="verticalSpace"></p>
-        <p id="separator">&#8212;&nbsp;&nbsp;&#8212;&nbsp;&nbsp;&#8212;</p>
-        <p class="verticalSpace"></p>
 
-        <section>
-            <h2 id="techWiki">Technology Wiki</h2>
-            <p class="verticalSpace"></p>
-
-            <article>
-                <h3>Logikai kapu</h3>
-                <p class="definition">Egy olyan idealizált vagy fizikai eszköz ami logikai alapmüveletet valósít meg egy vagy több bináris
-                    bemeneten és produkál egy bináris kimenetet.
-                </p>
-            </article>
-
-            <article>
-                <h3>ASCII</h3>
-                <p class="definition">Az angol neve American Standard Code for Information Interchange. A számítógépek csak a számokat
-                    értik,
-                    így a 'a' vagy '@' karakterek értelmezéséhez szükséges számosított értékeket írja le.
-                </p>
-            </article>
-
-            <article>
-                <h3>RAM</h3>
-                <p class="definition">Egy véletlen elérésű írható–olvasható adattároló eszköz. Tárolja a CPU által végrehajtandó
-                    programokat
-                    és a feldolgozásra váró adatokat. Egy adott memóriarész elérésének gyorsasága független az
-                    elhelyezkedésétől.
-                </p>
-            </article>
-
-            <article>
-                <h3>Algoritmus / program</h3>
-                <p class="definition">A számítástechnikában használt olyan, az ember által olvasható és értelmezhető utasítások sorozata,
-                    amivel közvetlenül, vagy közvetve (például: gépi kódra fordítás után) közölhetjük a számítógéppel
-                    egy adott feladat elvégzésének módját.
-                </p>
-            </article>
-
-            <article>
-                <h3>DNS (Domain Name System)</h3>
-                <p class="definition">Egy hierarchikus, nagymértékben decentralizált elnevezési rendszer számítógépek, szolgáltatások,
-                    illetve
-                    az internetre vagy egy magánhálózatra kötött bármilyen erőforrás számára.
-                </p>
-            </article>
-
-            <article>
-                <h3>HTTP</h3>
-                <p class="definition">Egy alkalmazás protokol elosztott, együttműködő és hipermédiás információs rendszerek részére. A
-                    World
-                    Wide Web adat kommunikációjának alapja. Ez az alapvető protokol a hypertext cseréjére és
-                    mozgatására.
-                </p>
-            </article>
-        </section>
-    </div>
-
-    <footer class="setSideMargin">
-        <br>&copy;ztm, 2022
-    </footer>
-
+    	
 </body>
 
 </html>
