--- a/index.html
+++ b/index.html
@@ -73,12 +73,10 @@
 
 	<div class="szinek igazitas bemutato">
 		<h3 style="font-size: 1.5em;color: red;"><b>F I G Y E L E M !</b></h3>
+    <p style="font-size: 1.1em;">Kizárólag importból származó alkatrészeket értékesítünk.</p>
 		<p style="font-size: 1.1em;color: red;">Forgalomból kivont autók bontásával eddig sem foglalkoztunk és a jövőben sem fogunk ilyen tevékenységet folytatni.
-			 Kizárólag importból származó alkatrészeket értékesítünk.
+      Kérjük ilyen irányú kéréssel ne forduljanak hozzánk.
     </p>
-    <p style="font-size: 1.1em;color: red;">
-			 Kérjük ilyen irányú kéréssel ne forduljanak hozzánk.
-		</p>
 	</div>
 
 	<hr>
