--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -47,16 +47,16 @@
 		<b>Telefonszámaink:</b> (30)929-5613, (70)453-5479, (70)453-5447<br>
 		<br>
 		<b>Nyitvatartás:</b><br>
-		<div style="background-color:red">
-			<p> <b> <br/> Ügyfeleink és munkatársaink egészségének védelme érdekében bontónk a kialakult <br/> járványügyi  veszélyhelyzet miatt 2020. március 23-tól átmenetileg zárva tart. <br/> E-mailen továbbra is elérhetőek vagyunk, de a kiszállítás újranyitásig szünetel.
-			<br>
-			<br>
-			</b> </p>
-		</div>
+		Hétfő: 9:00 - 16:00<br>
+		Kedd: 9:00 - 16:00<br>
+		Szerda: 9:00 - 16:00<br>
+		Csütörtök: 9:00 - 16:00<br>
+		Péntek: 9:00 - 16:00<br>
+		Szombat: ZÁRVA<br>
+		Vasárnap: ZÁRVA<br>
 		<br>
-		E-mail-ben a következő címek valamelyikén veheti fel velünk a kapcsolatot:<br>
-		<b>e-mail: </b> <a href="mailto:pcrbonto@gmail.com">pcrbonto@gmail.com</a><br>
-		<b>e-mail: </b> <a href="mailto:grasshopper91@citromail.hu">grasshopper91@citromail.hu</a><br>
+		E-mail-ben az alábbi címen veheti fel velünk a kapcsolatot:<br>
+		<b>e-mail: </b> <a href="mailto:pcrbonto@gmail.com">pcrbonto@gmail.com</a><br>		
 	</div>
 
 	<hr>
