--- a/index.html
+++ b/index.html
@@ -69,17 +69,27 @@
 		Vállaljuk az alkatrészek postai utánvéttel és futárszolgálattal történő értékesítését is.</p>
 	</div>
 
-  <hr>
+	<hr>
 
-	<div class="szinek igazitas bemutato">
-		<h3 style="font-size: 1.5em;color: red;"><b>F I G Y E L E M !</b></h3>
+  <div class="szinek igazitas bemutato">
+    <h3 style="font-size: 1.5em;color: red;"><b>F I G Y E L E M !</b></h3>
     <p style="font-size: 1.1em;">Kizárólag importból származó alkatrészeket értékesítünk.</p>
-		<p style="font-size: 1.1em;color: red;">Forgalomból kivont autók bontásával eddig sem foglalkoztunk és a jövőben sem fogunk ilyen tevékenységet folytatni.
+    <p style="font-size: 1.1em;color: red;">Forgalomból kivont autók bontásával eddig sem foglalkoztunk és a jövőben sem fogunk ilyen tevékenységet folytatni.
       Kérjük ilyen irányú kéréssel ne forduljanak hozzánk.
     </p>
-	</div>
+  </div>
 
-	<hr>
+  <hr>
+
+  <div class="szinek igazitas bemutato" style="background-color: red;">
+    <h3 style="font-size: 1.5em;"><b>F I G Y E L E M !</b></h3>
+    <p style="font-size: 1.1em;">Kizárólag importból származó alkatrészeket értékesítünk.</p>
+    <p style="font-size: 1.1em;">Forgalomból kivont autók bontásával eddig sem foglalkoztunk és a jövőben sem fogunk ilyen tevékenységet folytatni.
+      Kérjük ilyen irányú kéréssel ne forduljanak hozzánk.
+    </p>
+  </div>
+
+  <hr>
 
 	<div class="igazitas">
 		<img class="raktarkepek elsokep" src="image/raktar1.jpg" alt="Renault bontott orr kép">
